# pyrawdecode

./: flake.nix  pyproject.toml
pyrawdecode/: __init__.py  rawdecode.py
