[tool.poetry]
name = "pyrawdecode"
version = "0.1.0"
description = "Convert raw image files to common formats."
authors = ["Janne Lahteenmaki"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^10.0.0"
numpy = "^1.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyrawdecode = "pyrawdecode.rawdecode:main"
